--- a/test/Views/Shared/_Layout.cshtml
+++ b/test/Views/Shared/_Layout.cshtml
@@ -110,12 +110,13 @@
                                     <ul class="navbar-nav ">
                                         <li class="nav-item">
                                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">
-                                                <p id="mainPageP" style="font-family: FiraGO-SemiBold;
+                                                <p id="mainPageP" style="font-family: 'FiraGO-SemiBold' !important;
                                                                         font-size: 20px;
                                                                         font-style: normal;
                                                                         font-weight: 700;
                                                                         line-height: 23px;
-                                                                        letter-spacing: 0.1em;
+                                                                        letter-spacing: -.03em;
+                                                                        font-feature-settings: 'case' on;
                                                                         text-align: left;
                                                                         color:#F8BF0C;">
                                                     @SharedLocalizer["Home"]
@@ -124,12 +125,13 @@
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AboutUs">
-                                                <p id="aboutUsP" style="font-family: FiraGO-SemiBold;
+                                                <p id="aboutUsP" style="font-family: 'FiraGO-SemiBold' !important;
                                                                         font-size: 20px;
                                                                         font-style: normal;
                                                                         font-weight: 700;  
                                                                         line-height: 23px;
-                                                                        letter-spacing: 0.1em;
+                                                                        letter-spacing: -.03em;
+                                                                        font-feature-settings: 'case' on;
                                                                         text-align: left;
                                                                         color:white;
                                                                         margin-left:40px">@SharedLocalizer["AboutUs"]</p>
@@ -137,27 +139,29 @@
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Contacts">
-                                                <p id="contactsP" style="font-family: FiraGO-SemiBold;
+                                                <p id="contactsP" style="font-family: 'FiraGO-SemiBold' !important;
                                                                         font-size: 20px;
                                                                         font-style: normal;
-                                                                        font-weight: 700;
+                                                                        font-weight: 700;  
                                                                         line-height: 23px;
-                                                                        letter-spacing: 0.1em;
+                                                                        letter-spacing: -.03em;
+                                                                        font-feature-settings: 'case' on;
                                                                         text-align: left;
-                                                                        color: white;
+                                                                        color:white;
                                                                         margin-left:40px">@SharedLocalizer["Contacts"]</p>
                                             </a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="FAQ">
-                                                <p id="faqP" style="font-family: FiraGO-SemiBold;
+                                                <p id="faqP" style="font-family: 'FiraGO-SemiBold' !important;
                                                                         font-size: 20px;
                                                                         font-style: normal;
-                                                                        font-weight: 700;
+                                                                        font-weight: 700;  
                                                                         line-height: 23px;
-                                                                        letter-spacing: 0.1em;
+                                                                        letter-spacing: -.03em;
+                                                                        font-feature-settings: 'case' on;
                                                                         text-align: left;
-                                                                        color: white;
+                                                                        color:white;
                                                                         margin-left:40px">@SharedLocalizer["FAQ"]</p>
                                             </a>
                                         </li>
