--- a/test/Views/Shared/_Layout.cshtml
+++ b/test/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - test</title>
+    <title>@ViewData["Title"] - Dopomoga</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/test.styles.css" asp-append-version="true" />
@@ -82,7 +82,6 @@
             <div class="row" style="height:50px; background: #2791B6">
                 <div class="d-flex justify-content-end">
 
-
                      <p style="font-family: FiraGO-SemiBold;
                                             font-size: 20px;
                                             font-style: normal;
@@ -141,7 +140,7 @@
 
                                         </div>
 
-                                        <div style="width:25px; height:25px; margin-right:10px;margin-top:12px;float:right;margin-right:20px;"
+                                        <div style="width:25px; height:25px; margin-right:30px;margin-top:12px;float:right;margin-right:20px;"
                                              onclick="
                                                 $.ajax({
                                                     type: 'POST',
@@ -172,7 +171,6 @@
                                             </svg>
 
                                         </div>
-
 
 
                     <div style="width:30px; height:30px; margin-top:10px; margin-right:10px;" onclick="window.open('https://t.me/+ugrIKNOeRGAzMzVi', '_blank');">
@@ -274,7 +272,7 @@
                                             </a>
                                         </li>
                                     </ul>
-                                    @*<div class="d-flex">
+                                    @*<div class="d-flex" id="lowerLanguageBar">
                                         <p style="font-family: FiraGO-SemiBold;
                                             font-size: 20px;
                                             font-style: normal;
