--- a/test/wwwroot/css/site.css
+++ b/test/wwwroot/css/site.css
@@ -76,7 +76,17 @@ html, body {
     letter-spacing: -.03em;
     font-feature-settings: 'case' on;
     padding-top: 10px;
-    color: #FFFFFF;
+    color: white;
+}
+
+customText {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 25px;
+    text-decoration: none;
+    color: black;
 }
 
 .main-card-size {
@@ -85,15 +95,33 @@ html, body {
     object-fit: fill;
 }
 
+a {
+    color:black;
+    text-decoration:none;
+}
+
 .side-card-size {
     width: 100%;
     height: 10vw;
     object-fit: fill;
 }
 
+
 @media only screen and (max-width: 1000px) {
     #toggle_button {
         float:right;
+    }
+
+    .main-card-size {
+        width: 100%;
+        height: 50vw;
+        object-fit: fill;
+    }
+
+    .side-card-size {
+        width: 100%;
+        height: 50vw;
+        object-fit: fill;
     }
 }
 
@@ -125,6 +153,18 @@ html, body {
 
     .categoriesRow {
         justify-content:center;
+    }
+
+    .main-card-size {
+        width: 100%;
+        height: 50vw;
+        object-fit: fill;
+    }
+
+    .side-card-size {
+        width: 100%;
+        height: 50vw;
+        object-fit: fill;
     }
 
 }
