comment extra div

--- a/test/Views/Home/Index.cshtml
+++ b/test/Views/Home/Index.cshtml
@@ -170,7 +170,7 @@
                             color: #626262;">@SharedLocalizer["Info3"]   <br> <span style="color:darkblue">112</span> </p>
                             </div>
                         <div class="col-sm"></div>*@
-                    </div>
+                    @*</div>*@
                 }
                 else
                 {
