--- a/test/Views/Home/Index.cshtml
+++ b/test/Views/Home/Index.cshtml
@@ -44,11 +44,11 @@
                     <div class="row activeCategory">
                         @if (Model.Culture == "uk")
                         {
-                            <a style="text-decoration: none; padding-left: 30px" href="@Url.Action("Index", "Home", new {category = @category.Id})"><p class="textStyle">@category.CategoryUkrainianName</p></a>
+                            <a style="text-decoration: none; padding-left: 50px" href="@Url.Action("Index", "Home", new {category = @category.Id})"><p class="textStyle">@category.CategoryUkrainianName</p></a>
                         }
                         else
                         {
-                            <a style="text-decoration: none; padding-left: 30px" href="@Url.Action("Index", "Home", new {category = @category.Id})"><p class="textStyle">@category.CategoryGeorgianName</p></a>
+                            <a style="text-decoration: none; padding-left: 50px" href="@Url.Action("Index", "Home", new {category = @category.Id})"><p class="textStyle">@category.CategoryGeorgianName</p></a>
                         }
                     </div>
                 }
@@ -57,11 +57,11 @@
                     <div class="row categoryItem">
                         @if (Model.Culture == "uk")
                         {
-                            <a style="text-decoration: none; padding-left: 30px" href="@Url.Action("Index", "Home", new {category = @category.Id})"><p class="textStyle">@category.CategoryUkrainianName</p></a>
+                            <a style="text-decoration: none; padding-left: 50px" href="@Url.Action("Index", "Home", new {category = @category.Id})"><p class="textStyle">@category.CategoryUkrainianName</p></a>
                         }
                         else
                         {
-                            <a style="text-decoration: none; padding-left: 30px" href="@Url.Action("Index", "Home", new {category = @category.Id})"><p class="textStyle">@category.CategoryGeorgianName</p></a>
+                            <a style="text-decoration: none; padding-left: 50px" href="@Url.Action("Index", "Home", new {category = @category.Id})"><p class="textStyle">@category.CategoryGeorgianName</p></a>
                         }
                     </div>
                 }
@@ -206,7 +206,10 @@
     <div class="row" style="background:#EEEEEE;">
         <div class=col-md-3>
             <div class="row">
-                <div style="position: relative; top:10px;margin-left: 15px;">
+                @*<div style="position: relative; top:10px;margin-left: 15px;">*@
+
+                    <div class="flex-lg-wrap">
+                        <div style="float:left">
                  <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="183" height="55" fill="none" viewBox="0 0 183 55">
                   <path fill="#004990" d="M86.42 9.493v14.684c0 8.579-5.864 11.538-12.977 11.538-7.537 0-12.977-3.492-12.977-11.499V9.493h6.469v14.879c0 3.718 2.7 5.957 6.436 5.957 3.423 0 6.586-1.785 6.586-6.411V9.493h6.463zM109.068 16.215c-3.769-1.667-6.014-2.316-8.22-2.316-2.323 0-3.807.837-3.807 2.122 0 3.906 13.204 2.81 13.204 11.842 0 4.97-4.184 7.851-9.97 7.851-4.53 0-6.775-1.174-9.365-2.504v-5.58c3.73 2.465 6.014 3.341 8.87 3.341 2.474 0 3.808-.876 3.808-2.394 0-4.25-13.211-2.693-13.211-11.992 0-4.477 3.885-7.436 9.898-7.436 2.896 0 5.519.61 8.793 2.012v5.054z"/>
                   <path fill="#D31245" d="M140.957 35.377h-6.964l-2.128-5.12h-11.61l-1.94 5.12h-6.852L121.927 9.5h7.498l11.532 25.877zm-15.183-19.693l-3.808 10.057h7.992l-4.184-10.057zM150.283 9.493h-6.469v25.878h6.469V9.493zM167.295 9.493c9.475 0 14.35 5.879 14.35 12.978 0 7.436-4.719 12.9-15.073 12.9h-10.731V9.493h11.454zm-4.986 21.14h4.224c6.508 0 8.448-4.399 8.448-8.195 0-4.438-2.395-8.195-8.526-8.195h-4.152v16.39h.006z"/>
@@ -228,10 +231,12 @@
                     </pattern>
                   </defs>
                 </svg>
-                <div style="position:absolute; right:15px; top:0px;">
+                </div>
+                <div style="float: right; top:0px;">
                      <img src="~/content/images/EWMI.png" width="120px" height="50px;"/>
                  </div>
-            </div>
+                 </div>
+                @*</div>*@
                
 
             </div>
