--- a/test/wwwroot/css/site.css
+++ b/test/wwwroot/css/site.css
@@ -105,7 +105,19 @@ a {
     height: 10vw;
     object-fit: fill;
 }
-
+/*
+#loading {
+    display: flex;
+    position: fixed;
+    z-index: 100;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(192, 192, 192, 0.5);
+    background-image: url("https://c.tenor.com/wpSo-8CrXqUAAAAi/loading-loading-forever.gif");
+    background-repeat: no-repeat;
+    background-position: center;
+}
+*/
 
 @media only screen and (max-width: 1000px) {
     #toggle_button {
