loading screen and default language - ua

--- a/test/Views/Home/AboutUs.cshtml
+++ b/test/Views/Home/AboutUs.cshtml
@@ -120,6 +120,7 @@
         $("#mainPageP").css("color", "white");
         $("#contactsP").css("color", "white");
         $("#aboutUsP").css("color", "#F8BF0C");
+        $('#load').hide();
 
     };
 
