--- a/test/Views/Identity/Info.cshtml
+++ b/test/Views/Identity/Info.cshtml
@@ -42,4 +42,10 @@
     .catch( error => {
         console.error( error );
     } );
+
+    window.onload = function() {
+
+        $('#load').hide();
+
+    };
 </script>
