--- a/test/Views/Identity/Posts.cshtml
+++ b/test/Views/Identity/Posts.cshtml
@@ -112,4 +112,10 @@
     .catch( error => {
         console.error( error );
     } );
+
+    window.onload = function() {
+
+        $('#load').hide();
+
+    };
 </script>
