--- a/test/Views/Home/Contacts.cshtml
+++ b/test/Views/Home/Contacts.cshtml
@@ -120,8 +120,12 @@
         $("#mainPageP").css("color", "white");
         $("#contactsP").css("color", "#F8BF0C");
         $("#aboutUsP").css("color", "white");
+        $('#load').hide();
 
     };
+
+    
+    
 
 </script>
 
