--- a/test/Views/Identity/Login.cshtml
+++ b/test/Views/Identity/Login.cshtml
@@ -58,7 +58,8 @@
      
      window.onload = function() {
       $("#mainHeader").attr("hidden", "hidden");
+      $('#load').hide();
     };
-    
+     
     
  </script>
