usaid photo fix and cursor change on hover

--- a/test/Views/Shared/_Layout.cshtml
+++ b/test/Views/Shared/_Layout.cshtml
@@ -82,7 +82,7 @@
         <div class="row" style="height:50px; background: #2791B6">
             <div class="d-flex justify-content-end">
 
-                <p style="font-family: FiraGO-SemiBold;
+               @* <p style="font-family: FiraGO-SemiBold;
                                             font-size: 20px;
                                             font-style: normal;
                                             font-weight: 500;
@@ -102,10 +102,10 @@
                     {
                         <span style="margin-left:40px;">KA</span>
                     }
-                </p>
+                </p>*@
 
                 <div style="width:25px; height:25px; margin-right:5px;
-                                            margin-top:12px;"
+                                            margin-top:12px; cursor:pointer"
                      onclick="
                                                 $('#load').show();
                                                 $.ajax({
@@ -122,6 +122,7 @@
                                                     }
                                                 });
 ">
+
                     <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="none" viewBox="0 0 26 26">
                         <path fill="#fff" stroke="#fff" stroke-width="2" d="M1 12.683C1 6.23 6.23 1 12.683 1h.634C19.77 1 25 6.23 25 12.683c0 6.452-5.23 11.683-11.683 11.683h-.634C6.23 24.366 1 19.136 1 12.683z" />
                         <path fill="#F22222" d="M25.574 11.508H.426v2.984h25.148v-2.984z" />
@@ -142,10 +143,9 @@
                         </g>
                         <path stroke="#fff" d="M.5 12.683C.5 5.954 5.954.5 12.683.5h.634C20.046.5 25.5 5.954 25.5 12.683c0 6.728-5.454 12.183-12.183 12.183h-.634C5.954 24.866.5 19.41.5 12.683z" />
                     </svg>
-
                 </div>
 
-                <div style="width:25px; height:25px; margin-right:30px;margin-top:12px;float:right;margin-right:30px;"
+                <div style="width:25px; height:25px; margin-right:30px;margin-top:12px;float:right;margin-right:30px;  cursor:pointer"
                      onclick="
                                     
                                                 $('#load').show();
@@ -187,7 +187,7 @@
 
             </div>
         </div>
-        <nav class="navbar navbar-expand-lg navbar-toggleable-sm navbar-light" style="background: #2791B6">
+        <nav class="navbar navbar-expand-lg navbar-toggleable-sm navbar-light" style="background: #2791B6;">
 
             <div class="col-md-3"></div>
 
@@ -260,7 +260,7 @@
                                     </li>
                                 </ul>
                                 <div class="d-flex">
-                                    <div style="width:30px; height:30px; margin-top:10px; margin-right:10px;margin-left:auto;" onclick="window.open('https://t.me/+ugrIKNOeRGAzMzVi', '_blank');">
+                                    <div style="width:30px; height:30px; margin-top:10px; margin-right:10px;margin-left:auto; cursor:pointer" onclick="window.open('https://t.me/+ugrIKNOeRGAzMzVi', '_blank');">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="none" viewBox="0 0 48 47">
                                             <circle cx="23" cy="24" r="23" fill="white" />
                                             <path fill="#fff" stroke="none" d="M23.554 46.5c-12.693 0-23-10.325-23-23s10.307-23 23-23c12.692 0 23 10.307 23 23 0 12.692-10.326 23-23 23zm0-45.217c-12.245 0-22.218 9.973-22.218 22.217 0 12.244 9.973 22.218 22.218 22.218 12.244 0 22.217-9.974 22.217-22.218S35.798 1.283 23.554 1.283z" />
@@ -269,7 +269,7 @@
 
                                     </div>
 
-                                    <div style="width:30px; height:30px; margin-top:10px; margin-right:10px;" onclick="window.open('https://instagram.com/dopomoga.ge?utm_medium=copy_link', '_blank');">
+                                    <div style="width:30px; height:30px; margin-top:10px; margin-right:10px; cursor:pointer" onclick="window.open('https://instagram.com/dopomoga.ge?utm_medium=copy_link', '_blank');">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="none" viewBox="0 0 48 47">
                                             <circle cx="23" cy="24" r="23" fill="white" />
                                             <path fill="#fff" stroke="none" d="M24.344 46.5c-12.675 0-23-10.308-23-23 0-12.693 10.307-23 23-23 12.692 0 23 10.307 23 23 0 12.692-10.326 23-23 23zm0-45.217c-12.245 0-22.218 9.973-22.218 22.217 0 12.244 9.973 22.218 22.218 22.218 12.244 0 22.217-9.974 22.217-22.218S36.588 1.283 24.344 1.283z" />
@@ -278,7 +278,7 @@
                                         </svg>
                                     </div>
 
-                                    <div style="width:30px; height:30px; margin-top:10px;" onclick="window.open('https://www.facebook.com/www.dopomoga.ge/', '_blank');">
+                                    <div style="width:30px; height:30px; margin-top:10px; cursor:pointer" onclick="window.open('https://www.facebook.com/www.dopomoga.ge/', '_blank');">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="none" viewBox="0 0 48 47">
                                             <circle cx="24" cy="23" r="22" fill="white" />
                                             <path fill="#fff" stroke="white" d="M24.156 46.5c-12.675 0-23-10.308-23-23 0-12.693 10.307-23 23-23 12.675 0 23 10.308 23 23s-10.325 23-23 23zm0-45.217c-12.244 0-22.217 9.973-22.217 22.217 0 12.244 9.973 22.218 22.217 22.218 12.244 0 22.218-9.974 22.218-22.218S36.4 1.283 24.155 1.283z" />
