--- a/test/Views/Home/Contacts.cshtml
+++ b/test/Views/Home/Contacts.cshtml
@@ -36,6 +36,25 @@
                     @Html.Raw(Model.Info.PageTextInUkrainian)
                 }
             </div>
+
+            
+            <div class="row">
+                <div class="col-sm">
+                    <a href="https://www.facebook.com/www.dopomoga.ge/">
+                    <img src="~/content/images/FB_QR.jpg" width="300px" height="300px" />
+                    </a>
+                </div>
+                <div class="col-sm">
+                     <a href="https://t.me/+ugrIKNOeRGAzMzVi">
+                     <img src="~/content/images/telegram_QR.jpg"  width="300px" height="300px" />
+                     </a>
+                </div>
+                <div class="col-sm">
+                    <a href="https://instagram.com/dopomoga.ge?utm_medium=copy_link">
+                    <img src="~/content/images/insta_QR.jpg"  width="300px" height="400px"/>
+                    </a>
+                </div>
+            </div>
         </div>
     </div>
 
