--- a/test/Views/Shared/_Layout.cshtml
+++ b/test/Views/Shared/_Layout.cshtml
@@ -11,6 +11,17 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+
+
+    <meta property="og:title" content="Dopomoga"/>
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="https://www.dopomoga.ge" />
+    <meta property="og:site_name" content="Dopomoga" />
+    <meta property="og:image:width" content="660" />
+    <meta property="og:image:height" content="780" />
+
+
     <link rel="shortcut icon" href="favicon.ico" >
     <title>Dopomoga</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
