--- a/test/Views/Shared/_Layout.cshtml
+++ b/test/Views/Shared/_Layout.cshtml
@@ -22,17 +22,15 @@
     <meta property="og:image:height" content="780" />
 
 
-    <link rel="shortcut icon" href="favicon.ico" >
+    <link rel="shortcut icon" href="~/favicon.ico" />
     <title>Dopomoga</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/test.styles.css" asp-append-version="true" />
     <!-- Bootstrap icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" type="text/css" />
     <!-- Google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" asp-append-version="true" />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="css/styles.css" rel="stylesheet" asp-append-version="true" />
 </head>
 <body style="height: 100%">
 
@@ -116,7 +114,7 @@
                     }
                 </p>*@
 
-                <div style="width:25px; height:25px; margin-right:5px;margin-top:12px; cursor:pointer; background-image: url('~/content/images/united_kingdom.svg')"
+                <div style="width:25px; height:25px; margin-right:5px;margin-top:12px; cursor:pointer;"
                      onclick=" ">
                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"  width="26" height="26" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
 <circle style="fill:#F0F0F0;" cx="256" cy="256" r="256" />
