try to fix facebook url preview

--- a/test/Views/Shared/_Layout.cshtml
+++ b/test/Views/Shared/_Layout.cshtml
@@ -14,12 +14,11 @@
 
 
 
-    <meta property="og:title" content="Dopomoga"/>
-    <meta property="og:type" content="article" />
     <meta property="og:url" content="https://www.dopomoga.ge" />
-    <meta property="og:site_name" content="Dopomoga" />
-    <meta property="og:image:width" content="660" />
-    <meta property="og:image:height" content="780" />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="Dopomoga" />
+    <meta property="og:description" content="Dopomoga" />
+    <meta property="og:image" content="http://static01.nyt.com/images/2015/02/19/arts/international/19iht-btnumbers19A/19iht-btnumbers19A-facebookJumbo-v2.jpg" />
 
 
     <link rel="shortcut icon" href="~/favicon.ico" />
